# kilomarket

./: .gitignore  README.md  apprunner.yaml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  agent_registry.py  base_agent.py  contract_audit_agent.py  crypto_market_agent.py  vibe_coding_agent.py
agents/agent_tools/: __init__.py  market_tools.py
config/: mcp_config.json
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx  providers.tsx  wrapper.tsx
frontend/app/dashboard/: page.tsx
frontend/app/explore/: page.tsx
frontend/components/: ConnectWallet.tsx
frontend/components/Dashboard/: AgentWalletInfo.tsx  CreateSessionKeyModal.tsx  QuickActions.tsx  SessionKeyTable.tsx  SetPasscodeModal.tsx  ViewSessionKeyModal.tsx  index.tsx
frontend/components/Explore/: AgentDetailsPanel.tsx  AgentListPanel.tsx  ConversationPanel.tsx  MessageItem.tsx  S3Integration.tsx  index.tsx
frontend/lib/: chains.ts  sessionKeys.ts  wagmi.ts  zerodev.ts
frontend/scripts/: create-smart-wallet.ts  transaction-automation.ts  yellow-close-all.ts  yellow-payment.ts
mcp/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
mcp/scripts/: test-yellow-client.ts
mcp/src/: config.ts  index.ts  types.ts
server/: __init__.py  a2a_server.py  agent_utils.py  ai_provider.py  app.py  mcp_manager.py  routes.py  sessions.py  settings.py  static.py  templates.py  wallet_settings.py
server/templates/: __init__.py  ai_provider.py  base.py  interactive.py  main.py  markets.py  wallet_settings.py
(+30 files in other folders)
